--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -183,14 +183,4 @@ jobs:
         echo "$SSH_PRIVATE_KEY" | tr -d '\r' | DISPLAY=None SSH_ASKPASS=~/.ssh_askpass ssh-add - >/dev/null
     - name: Scp to host
       run: |
-        scp -r src/onlinehelp/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SSH_REMOTE_PATH }}
-    - name: Copy Cab files to Update.Tatux.co.uk via SSH
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.SSH_HOST }}
-        port: 9284
-        username: ${{ secrets.SSH_USER }}
-        source: "src/onlinehelp/*,!src/onlinehelp/*/docs/"
-        target: ${{ secrets.SSH_REMOTE_PATH }}
-        rm: true
-        debug: true
+        scp -r -P 9284 src/onlinehelp/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SSH_REMOTE_PATH }}
