--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -32,7 +32,7 @@ jobs:
       id: cacher
       uses: actions/cache@v3
       with:
-          path: "C:\Users\runneradmin\Documents\PowerShell\Modules\"
+          path: 'C:\Users\runneradmin\Documents\PowerShell\Modules\'
           key: ${{ runner.os }}-PowershellDocs
     
     - name: Install PowerShell Dependencies - PlatyPS and Docusaurus
