--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -184,4 +184,5 @@ jobs:
 
     - name: RSYNC to host
       run: |
-        rsync -r -e 'ssh -p 9284 -o StrictHostKeyChecking=no' --progress --exclude \Docs\ src/onlinehelp/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SSH_REMOTE_PATH }}
+        ssh-keygen -R tatux.co.uk
+        rsync -r -e 'ssh -p 9284' --progress --exclude \Docs\ src/onlinehelp/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SSH_REMOTE_PATH }}
