--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -184,6 +184,7 @@ jobs:
 
     - name: RSYNC to host
       run: |
+        mkdir ~/.ssh
         touch ~/.ssh/known_hosts
         ssh-keygen -R tatux.co.uk
         rsync -r -e 'ssh -p 9284' --progress --exclude \Docs\ src/onlinehelp/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SSH_REMOTE_PATH }}
