--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -182,6 +182,12 @@ jobs:
         echo "echo $SSH_PASSPHRASE" > ~/.ssh_askpass && chmod +x ~/.ssh_askpass
         echo "$SSH_PRIVATE_KEY" | tr -d '\r' | DISPLAY=None SSH_ASKPASS=~/.ssh_askpass ssh-add - >/dev/null
 
-    - name: RSYNC to host
-      run: |
-        rsync -rP -e "ssh -p 9284 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" --exclude \Docs\ src/onlinehelp/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SSH_REMOTE_PATH }}
+    - name: rsync deployments
+      uses: burnett01/rsync-deployments@7.0.1
+      with:
+        switches: -avzr --delete --exclude="\Docs\" -e "ssh -p 9284 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
+        path: src/onlinehelp/*
+        remote_path: ${{ secrets.SSH_REMOTE_PATH }}
+        remote_host: ${{ secrets.SSH_HOST }}
+        remote_user: ${{ secrets.SSH_USER }}
+        remote_key: ${{ secrets.DEPLOY_KEY }}
