--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -185,7 +185,7 @@ jobs:
     - name: rsync cab files
       uses: burnett01/rsync-deployments@7.0.1
       with:
-        switches: -avzr --delete --exclude="\Docs\" -e "ssh -p 9284 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
+        switches: -avzr --delete --exclude="\Docs\" -e 'ssh -p 9284 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
         path: src/onlinehelp/*
         remote_path: ${{ secrets.SSH_REMOTE_PATH }}
         remote_host: ${{ secrets.SSH_HOST }}
