--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -182,14 +182,6 @@ jobs:
         echo "echo $SSH_PASSPHRASE" > ~/.ssh_askpass && chmod +x ~/.ssh_askpass
         echo "$SSH_PRIVATE_KEY" | tr -d '\r' | DISPLAY=None SSH_ASKPASS=~/.ssh_askpass ssh-add - >/dev/null
 
-    - name: Rsync Deployments Action
-      uses: Burnett01/rsync-deployments@7.0.1
-      with:
-        switches: -avzr -e 'ssh -p 9284' --exclude="Docs"
-        remote_key: ${{ secrets.POWERSHELL_UPDATE_FILES_PRIVATE_KEY }}
-        path: 'src/onlinehelp/'
-        remote_path: ${{ secrets.SSH_REMOTE_PATH }}
-        remote_host: ${{ secrets.SSH_HOST }}
-        remote_user: ${{ secrets.SSH_USER }}
-        remote_port: 9284
-        remote_key_pass: ${{ secrets.POWERSHELL_UPDATE_FILES_PRIVATE_KEY_PASSWORD }}
+    - name: SCP to Server
+      run: |
+        scp -r -P 9284 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null src/onlinehelp/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SSH_REMOTE_PATH }}
