fixes ro module config logic

--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -183,5 +183,9 @@ jobs:
 
     - name: SCP to Server
       run: |
-        ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} -p 9284 "rm ${{ secrets.SSH_REMOTE_PATH }}* -r"
+        ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} -p 9284 "
+        if [[ -n ${{ secrets.SSH_REMOTE_PATH }} ]]; then
+            rm -rf ${{ secrets.SSH_REMOTE_PATH }}/*
+        fi
+        "
         scp -r -P 9284 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null src/onlinehelp/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SSH_REMOTE_PATH }}
