--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -86,7 +86,7 @@ jobs:
             }
             try {
               Import-Module $ModuleFilesPath -Force -ErrorAction Stop
-              Get-Command -Module $Module | Select-Object -Property Name
+              Get-Command -Module $Module | Select-Object -ExpandProperty Name
               Update-MarkdownHelpModule -Path $OriginalMDPath -Force -AlphabeticParamsOrder -RefreshModulePage -UpdateInputOutput -ErrorAction Stop
             } catch {
               Write-Error "Failed to update markdown help for $Module. Error: $_"
