--- a/src/modules/tatux.intune.packaging/Public/Templates/Registry/config.installer.json
+++ b/src/modules/tatux.intune.packaging/Public/Templates/Registry/config.installer.json
@@ -2,6 +2,7 @@
     "name": "##NAME_TEMPLATE",
     "uninstallpath": "##UNINSTALLPATH_TEMPLATE",
     "version": "##VERSION_TEMPLATE",
+    "target": "##TARGET_TEMPLATE",
     "precommandfile": "Intune-Pre-Install.ps1",
     "postcommandfile": "Intune-Post-Install.ps1"
 }
