updates to config deplyment function

--- a/src/modules/tatux.intune.packaging/Public/Templates/Registry/config.installer.json
+++ b/src/modules/tatux.intune.packaging/Public/Templates/Registry/config.installer.json
@@ -1,8 +1,9 @@
 {
     "name": "##NAME_TEMPLATE",
-    "uninstallpath": "##UNINSTALLPATH_TEMPLATE",
     "version": "##VERSION_TEMPLATE",
     "target": "##TARGET_TEMPLATE",
+    "registryfile": "##REGISTRY_TEMPLATE",
     "precommandfile": "Intune-Pre-Install.ps1",
-    "postcommandfile": "Intune-Post-Install.ps1"
+    "postcommandfile": "Intune-Post-Install.ps1",
+    "packagedby": "##PACKAGEDBY_TEMPLATE"
 }
